2.5.8
 - support for oracle DATE type which contains also time

2.5.7
 - the primary key of the table JAILER_ENTITY can be generated in a more compact way in order to reduce the risc to exceed the maximum number
   of parts per key allowed by the DBMS. To enable this feature, set the parameter 'minimize-UPK' to true in 'config/config.xml'

2.5.6
 - additional type arguments will now be removed from the result of DatabaseMetaData#getColumns (for better compatibility with MS SQL Server)

2.5.5
 - the table name in insert statements for BLOB/CLOBs in generated SQL scripts is now qualified with target schema name
 - fixed a bug concering the importation of BLOB/CLOBs into non-nullable columns

2.5.4
 - the pattern for timestamp values in generated SQL scripts for oracle DBMS is now fixed (using the to_timestamp function)
 - additional type options will now be removed from the result of DatabaseMetaData#getColumns 

2.5.3
 - bug fix: search timestamp pattern even if dummy values are already persisted 

2.5.2
 - "show table details" is now initially switched off
 - the focused table is now initially collapsed if it is associated with more than 10 other tables

2.5.1
 - fixed a bug concerning the introspection of tables which have columns of type NVARCHAR2 or NCHAR.

2.5.0
 - new dialog "Closure Browser" added which allows the user to browse through the closure of a table
 - Visualization of reversal association's type in tree view
 - "Shortest path" analysis and rendering
 - the 'UPDATE' part of 'UPSERT'-statements in generated SQL-scripts no longer updates primary key columns
 - added context menu item for HTML rendering of tables

2.4.4
 - improved interaction between the graphical and hierarchical view
 - added predefined setting for Microsoft SQL Server 2005
 - minor bug fixes

2.4.3
 - added menu items for disabling/removing restrictions to context menu

2.4.2
 - SQL identifier quotation
 - schema mapping

2.4.1
 - multi-schema support